Upgrade Hugo version and fix spacing bug

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -695,10 +695,6 @@ figcaption {
     margin-top: 0;
   }
 
-  & ul {
-    margin-bottom: 2.5rem;
-  }
-
   & ul li {
     margin-bottom: 0.2rem;
 
